<resources>
    <string name="app_name">Component</string>
    <string name="action_settings">Settings</string>

    <string name="button_clean">"清空"</string>

    <string name="textView_1">"性别："</string>
    <string name="radioButton_man">"男"</string>
    <string name="radioButton_woman">"女"</string>

    <string name="textView_2">"选项："</string>
    <string name="checkbox_a">A</string>
    <string name="checkbox_b">B</string>
    <string name="checkbox_c">C</string>
    <string name="checkbox_d">D</string>
</resources>
